[+ added, - removed, * changed ]
   + (08/Nov/2011) New script mrnapp-config to query configure options (cflags, libs, etc.)
   + (25/Oct/2011) Initial commit of the libMRNetApp package.